--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -33,7 +37,7 @@
         in the finished product.) -->
 
       <!-- example of a past time block -->
-      <div id="hour-9" class="row time-block past">
+      <div id="hour-9" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">9AM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -42,7 +46,7 @@
       </div>
 
       <!-- example of a present time block -->
-      <div id="hour-10" class="row time-block present">
+      <div id="hour-10" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">10AM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -51,8 +55,60 @@
       </div>
 
       <!-- example of a future time block -->
-      <div id="hour-11" class="row time-block future">
+      <div id="hour-11" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">11AM</div>
+        <textarea class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="hour-12" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">12PM</div>
+        <textarea class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <!-- example of a present time block -->
+      <div id="hour-13" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">1PM</div>
+        <textarea class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <!-- example of a future time block -->
+      <div id="hour-14" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">2PM</div>
+        <textarea class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="hour-15" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">3PM</div>
+        <textarea class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <!-- example of a present time block -->
+      <div id="hour-16" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">4PM</div>
+        <textarea class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <!-- example of a future time block -->
+      <div id="hour-17" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">5PM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
