asking for help

--- a/index.html
+++ b/index.html
@@ -30,27 +30,8 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- use class for "past", "present", and "future" to apply styles
-        to the time-block divs accordingly. (you'll need to do this in your
-        JavaScript code. Don't forget to delete this comment when you are done.
-        The classes are used as examples below and should be removed from the html
-        in the finished product.) -->
 
-        <!--
-          var hourMoment = computer gets hour from Moment
-          for timeBlock in all divs with class time-block
-            var hourID = getting ID from timeBlock 
-            if hourMoment is equal to hourID 
-              add present class to timeBlock
-            else if hourMoment is less than hourID
-              add past class to timeBlock
-            else 
-              add future class to timeBlock
-                
-        -->
-  
-      <!-- example of a past time block -->
-      <div id="hour-09" class="input-group mb-3 row time-block">
+      <div id="9" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">9AM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -58,8 +39,7 @@
         </button>
       </div>
 
-      <!-- example of a present time block -->
-      <div id="hour-10" class="input-group mb-3 row time-block">
+      <div id="10" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">10AM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -67,8 +47,7 @@
         </button>
       </div>
 
-      <!-- example of a future time block -->
-      <div id="hour-11" class="input-group mb-3 row time-block">
+      <div id="11" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">11AM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -76,7 +55,7 @@
         </button>
       </div>
 
-      <div id="hour-12" class="input-group mb-3 row time-block">
+      <div id="12" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">12PM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -84,8 +63,7 @@
         </button>
       </div>
 
-      <!-- example of a present time block -->
-      <div id="hour-13" class="input-group mb-3 row time-block">
+      <div id="13" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">1PM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -93,8 +71,7 @@
         </button>
       </div>
 
-      <!-- example of a future time block -->
-      <div id="hour-14" class="input-group mb-3 row time-block">
+      <div id="14" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">2PM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -102,7 +79,7 @@
         </button>
       </div>
 
-      <div id="hour-15" class="input-group mb-3 row time-block">
+      <div id="15" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">3PM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -110,8 +87,8 @@
         </button>
       </div>
 
-      <!-- example of a present time block -->
-      <div id="hour-16" class="input-group mb-3 row time-block">
+
+      <div id="16" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">4PM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -119,8 +96,8 @@
         </button>
       </div>
 
-      <!-- example of a future time block -->
-      <div id="hour-17" class="input-group mb-3 row time-block">
+   
+      <div id="17" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">5PM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -132,7 +109,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
 
-    <!-- link your javascript files here. (Must be after jquery is linked!
-      You should be able to explain why that is to be "employer ready".) -->
   </body>
 </html>
