--- a/index.html
+++ b/index.html
@@ -31,75 +31,75 @@
     </header>
     <div class="container">
 
-      <div id="14" class="input-group mb-3 row time-block">
+      <div id="9" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">9AM</div>
-        <textarea class="col-md-10 description"> </textarea>
+        <textarea type ="text" class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1"> 
           <i class="fas fa-save"></i>
         </button>
       </div>
 
-      <div id="15" class="input-group mb-3 row time-block">
+      <div id="10" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">10AM</div>
-        <textarea class="col-md-10 description"> </textarea>
+        <textarea type ="text" class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
+
+      <div id="11" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">11AM</div>
+        <textarea type ="text" class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="12" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">12PM</div>
+        <textarea type ="text" class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="13" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">1PM</div>
+        <textarea type ="text" class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="14" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">2PM</div>
+        <textarea type ="text" class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div id="15" class="input-group mb-3 row time-block">
+        <div class="col-md-1 hour">3PM</div>
+        <textarea type ="text" class="col-md-10 description"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
 
       <div id="16" class="input-group mb-3 row time-block">
-        <div class="col-md-1 hour">11AM</div>
-        <textarea class="col-md-10 description"> </textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-
-      <div id="17" class="input-group mb-3 row time-block">
-        <div class="col-md-1 hour">12PM</div>
-        <textarea class="col-md-10 description"> </textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-
-      <div id="18" class="input-group mb-3 row time-block">
-        <div class="col-md-1 hour">1PM</div>
-        <textarea class="col-md-10 description"> </textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-
-      <div id="19" class="input-group mb-3 row time-block">
-        <div class="col-md-1 hour">2PM</div>
-        <textarea class="col-md-10 description"> </textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-
-      <div id="20" class="input-group mb-3 row time-block">
-        <div class="col-md-1 hour">3PM</div>
-        <textarea class="col-md-10 description"> </textarea>
-        <button class="btn saveBtn col-md-1">
-          <i class="fas fa-save"></i>
-        </button>
-      </div>
-
-
-      <div id="21" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">4PM</div>
-        <textarea class="col-md-10 description"> </textarea>
+        <textarea type ="text" class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
       </div>
 
    
-      <div id="22" class="input-group mb-3 row time-block">
+      <div id="17" class="input-group mb-3 row time-block">
         <div class="col-md-1 hour">5PM</div>
-        <textarea class="col-md-10 description"> </textarea>
+        <textarea type ="text" class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
           <i class="fas fa-save"></i>
         </button>
